force-app/main/default/objects/RDPricingMfgRngPrice__c/RDPricingMfgRngPrice__c.object-meta.xml
<CustomObject>
    <label>RDPricingMfgRngPrice</label>
    <nameField>
        <label>RDPricingMfgRngPrice</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RDPricingMfgRngPrice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>