force-app/main/default/objects/RDPricingMfgRngPrice__c/fields/AssignedMfgRng__c.field-meta.xml
<CustomField>
    <fullName>AssignedMfgRng__c</fullName>
    <label>AssignedMfgRng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>