force-app/main/default/objects/RDPricingMfgRngPrice__c/fields/Lot_Price__c.field-meta.xml
<CustomField>
    <fullName>Lot_Price__c</fullName>
    <label>Lot Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>