force-app/main/default/objects/RDPricingMfgRngPrice__c/fields/SizeValueUL__c.field-meta.xml
<CustomField>
    <fullName>SizeValueUL__c</fullName>
    <label>SizeValueUL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>