force-app/main/default/objects/RDPricingMfgRngPrice__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SizeLL__c</columns>
    <columns>SizeUL__c</columns>
    <columns>SizeValueLL__c</columns>
    <columns>SizeValueUL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>